--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@uploadthing/react": "^5.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^5.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
