--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.4",
-
-
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
-
-    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^4.36.1",
@@ -35,6 +31,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-pdf": "^7.5.0",
+    "react-query": "^3.39.3",
     "react-resize-detector": "^9.1.0",
     "simplebar-react": "^3.2.4",
     "tailwind-merge": "^1.14.0",
