--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "^11.1.1",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
+    "openai": "^4.12.1",
     "pdf-parse": "^1.1.1",
     "pdfjs": "^2.5.2",
     "prisma": "^5.4.2",
