--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "fs-extra": "^11.1.1",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
