--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-pdf": "^7.5.0",
     "react-query": "^3.39.3",
     "react-resize-detector": "^9.1.0",
+    "react-select": "^5.7.7",
     "simplebar-react": "^3.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
