--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clerk": "^0.8.3",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "fs-extra": "^11.1.1",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
