--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pdfjs": "^2.5.2",
     "pdfjs-dist": "^3.11.174",
     "prisma": "^5.4.2",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
